[package]
name = "allenap-unison-confgen"
authors = ["Gavin Panella <gavin@allenap.me>"]
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/allenap/unison-confgen"
description = "Generate Unison configuration files from a YAML description"
license-file = "LICENSE"

[[bin]]
name = "unison-confgen"
path = "src/main.rs"

[dependencies]
serde = { version = "=1.0.203", features = ["derive"] }
serde_yaml = { version = "=0.9.34" }                    # DEPRECATED
hostname = { version = "=0.4.0", features = [] }
itertools = { version = "=0.13.0" }
