[package]
name = "allenap-unison-confgen"
authors = ["Gavin Panella <gavin@allenap.me>"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/allenap/unison-confgen"
description = "Generate Unison configuration files from a TOML description"
license-file = "LICENSE"

[[bin]]
name = "unison-confgen"
path = "src/main.rs"

[dependencies]
serde = { version = "=1.0.219", features = ["derive"] }
hostname = { version = "=0.4.1", features = [] }
itertools = { version = "=0.14.0" }
toml = "0.9.5"
